edit user show,edit users helper,edit users controller

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,4 +7,8 @@
     </ul>
   </article>
 </section>
+<%=make_friend_request%>
+<%=pending_friends_header%>
+<%=pending_friends %>
+<%=friend_requests_header%>
 <%=friend_requests%>
