--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,9 @@
         </div>
       </div>
       <% if current_user %>
+        <% if controller_name == 'users' && action_name == 'show' %>
+          <%= link_to 'my profile' ,user_path(current_user) ,class: 'highlight'%>
+        <% end %>  
         <%= link_to 'Sign out', destroy_user_session_path, method: :delete %>
       <% else %>
         <%= link_to 'Sign in', user_session_path %>
