edit user show,user helper,users controller

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,3 +17,12 @@
  .highlight {
    text-decoration: underline;
  }
+
+ .friend_requests_table {
+   display: flex;
+ }
+
+ .friend_requests,
+ .approve_requests {
+   padding-right: 30px;
+ }
