--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,4 +11,8 @@
 <%=pending_friends_header%>
 <%=pending_friends %>
 <%=friend_requests_header%>
-<%=friend_requests%>
+<div class="friend_requests_table">
+  <div class="friend_requests"><%=friend_requests%></div>
+  <div class="approve_requests"><%=approve_requests%></div>
+  <div><%=delete_requests%></div>
+</div>
