--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,7 +7,7 @@
     </ul>
   </article>
 </section>
-<%=make_friend_request%>
+<div class="frequest"><%=make_friend_request%></div>
 <%=pending_friends_header%>
 <%=pending_friends %>
 <%=friend_requests_header%>
