--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -26,3 +26,13 @@
  .approve_requests {
    padding-right: 30px;
  }
+
+ .frequest {
+   margin-top: -120px;
+   margin-left: -60px;
+ }
+
+ .profile-link
+ {
+   margin-right: 30px;
+ }
