--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,25 +14,24 @@
  *= require_self
  */
 
- .highlight {
-   text-decoration: underline;
- }
+.highlight {
+  text-decoration: underline;
+}
 
- .friend_requests_table {
-   display: flex;
- }
+.friend_requests_table {
+  display: flex;
+}
 
- .friend_requests,
- .approve_requests {
-   padding-right: 30px;
- }
+.friend_requests,
+.approve_requests {
+  padding-right: 30px;
+}
 
- .frequest {
-   margin-top: -120px;
-   margin-left: -60px;
- }
+.frequest {
+  margin-top: -120px;
+  margin-left: -60px;
+}
 
- .profile-link
- {
-   margin-right: 30px;
- }
+.profile-link {
+  margin-right: 30px;
+}
